# fast-api-db

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.debugpy  Dockerfile.mstage  Dockerfile.pip  Dockerfile.poetry  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
app/: main.py
src/fast_api_db/: main.py  utils.py
src/fast_api_db/crud/: item.py
src/fast_api_db/database/: connection.py
src/fast_api_db/model/: model.py
