[metadata]
name = fast-api-db
description = fastapi database
author = anakin-1181

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    = src


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

[tool:pytest]
testpaths =
    tests
addopts =
    --cov src
    --cov-report term-missing
    --disable-warnings
    --verbose
norecursedirs =
    dist
    build
    .tox
    resources
    log
    model
    venv

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
    venv
    log
    model
    resources
